papauté + demons + épopée + debut map

--- a/templates/god_hands.html
+++ b/templates/god_hands.html
@@ -23,7 +23,7 @@
     <main id="main">
         <div class="container">
             <div>
-                <h1 id="title">God Hands</h1>
+                <h1 id="title">God Hand</h1>
                 <div>
                     <figure>
                         <img id="proto" src="../img/GOD_HANDS/GOD_HANDS.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
