--- a/templates/header.html
+++ b/templates/header.html
@@ -5,7 +5,7 @@
                 <a class="nav-link" href="./troupe_faucon.html">Troupe du Faucon</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./god_hands.html">GOD Hands</a>
+                <a class="nav-link" href="./epopee.html">Épopée</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./royauté.html">Royauté</a>
@@ -17,7 +17,10 @@
                 <a class="nav-link" href="./main_page.html">
                     <img src="../img/Berserk_logo.png" alt="Berserk Logo" style="height: 35px; width: auto;">
                 </a>
-            </li>            
+            </li>          
+            <li class="nav-item">
+                <a class="nav-link" href="./god_hands.html">GOD Hand</a>
+            </li>  
             <li class="nav-item">
                 <a class="nav-link" href="./demons.html">Demons</a>
             </li>
