--- a/templates/royauté.html
+++ b/templates/royauté.html
@@ -23,22 +23,299 @@
     <main id="main">
         <div class="container">
             <div>
-                <h1 id="title">XXXXXXXXX</h1>
-                <p id="captioning"><em>The legendary manga artist who was an inspiration to many</em></p>
+                <h1 id="title">Royauté</h1>
+                <div>
+                    <figure>
+                        <img id="proto" src="../img/Royaute/Royaute.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                        <!-- Modal -->
+                        <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                            aria-labelledby="berserker-img" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal"
+                                            aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <img src="../img/Royaute/Royauté.png"
+                                        class="modal-image img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Modal -->
+                        </figure>
+                </div>
+            </div>
+            <br>
+
+            <div id="manga-list">
+                <ul>
+                    <!-- Roi -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Roi de Midland</h2>
+                    </li>
+                    
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/Royaute/Roi.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/Royaute/Roi.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+                    <p class="description"> <strong> Description  :</strong>Le Roi de Midland est un souverain vieillissant et de plus en plus paranoïaque.
+                        Bien qu'il commence comme un dirigeant noble, sa jalousie et son obsession de pouvoir le mènent à des actes cruels, notamment envers Griffith.
+                   </p>
+                    <br>
+                    <p class="description"> <strong> Affinités et Pouvoirs :</strong> En tant que roi, il a une autorité absolue sur son royaume et dispose de vastes ressources militaires et politiques.
+                        Ses décisions deviennent de plus en plus irrationnelles à mesure qu'il perd la raison.
+                    </p>
+                    <br>
+
+                    <!-- Reine de Midland -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Reine de Midland</h2>
+                    </li>
+                    
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/Royaute/Reine.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>                                        
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/Royaute/Reine.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+                    <p class="description"> <strong> Description  :</strong>Le Roi de Midland est un souverain vieillissant et de plus en plus paranoïaque.
+                        Bien qu'il commence comme un dirigeant noble, sa jalousie et son obsession de pouvoir le mènent à des actes cruels, notamment envers Griffith.
+                   </p>
+                    <br>
+                    <p class="description"> <strong> Affinités et Pouvoirs :</strong> En tant que roi, il a une autorité absolue sur son royaume et dispose de vastes ressources militaires et politiques.
+                        Ses décisions deviennent de plus en plus irrationnelles à mesure qu'il perd la raison.
+                    </p>
+                   <br>
+
+                    <!-- Princesse Charlotte -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Princesse Charlotte</h2>
+                    </li>
+                    
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/Royaute/Charlotte.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/Royaute/Charlotte.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+                    <p class="description"> <strong> Description  :</strong>Charlotte est la douce et naïve fille du Roi de Midland. 
+                        Elle tombe amoureuse de Griffith, qu'elle voit comme un chevalier noble et héroïque. 
+                        Elle est souvent protégée et isolée du monde extérieur.
+                   </p>
+                    <br>
+                    <p class="description"> <strong> Affinités et Pouvoirs :</strong> Bien qu'elle n'ait pas de pouvoirs spécifiques,
+                         sa relation avec Griffith est un point crucial de l'intrigue, provoquant des conflits politiques et personnels.
+                    </p>
+                    <br>
+
+                    <h1 id="title">Troupe des Chaînes d'Acier</h1>
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/Royaute/Chaines_acier.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/Royaute/Chaines_acier.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                            </figure>
+                    </div>
+
+                    <!-- Dame Farnese de Vandimion -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Dame Farnese de Vandimion</h2>
+                    </li>
+                    
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/Royaute/Farnese.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/Royaute/Farnese.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+                    <p class="description"> <strong> Description  :</strong>Farnese est la commandante de la Troupe des Chaînes d'Acier, 
+                        une branche de l'Église de la Sainte Chaîne de Fer dédiée à la chasse aux hérétiques. 
+                        Elle est dévote mais tourmentée par ses propres insécurités et désirs.
+                   </p>
+                    <br>
+                    <p class="description"> <strong> Affinités et Pouvoirs :</strong> Farnese est une combattante compétente mais est souvent guidée par ses émotions et ses doutes.
+                         Elle a une relation complexe avec Guts et lutte pour concilier sa foi avec la réalité brutale du monde
+                    </p>
+                    <br>
+
+                    <!-- Serpico -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Serpico</h2>
+                    </li>
+                    
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/Royaute/Serpico.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/Royaute/Serpico.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+                    <p class="description"> <strong> Description  :</strong>Serpico est le demi-frère et le protecteur dévoué de Farnese.
+                        Il est intelligent, calme et habile à l'épée, souvent jouant le rôle de médiateur et de stratège dans la troupe.
+                   </p>
+                    <br>
+                    <p class="description"> <strong> Affinités et Pouvoirs :</strong> Serpico est un combattant agile et rusé, utilisant souvent sa vitesse et son intelligence pour compenser ses adversaires plus puissants.
+                        Sa loyauté envers Farnese est inébranlable, bien qu'il ait ses propres motivations secrètes.
+                    </p>
+                    <br>
+
+                    <!-- Azan  -->
+                    <li class="mangatitle">
+                        <h2 style="text-align: center;">Azan</h2>
+                    </li>
+                    
+                    <div>
+                        <figure>
+                            <img id="proto" src="../img/Royaute/Azan.png" class="center hover" data-toggle="modal" data-target="#berserker-img">
+                            <!-- Modal -->
+                            <div class="modal fade" id="berserker-img" tabindex="-1" role="dialog"
+                                aria-labelledby="berserker-img" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>                                        </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="../img/Royaute/Azan.png"
+                                            class="modal-image img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal -->
+                        </figure>
+                    </div>
+                    <p class="description"> <strong> Description  :</strong>Azan est un chevalier vétéran et membre de la Troupe des Chaînes d'Acier. 
+                        Il est honorable, strict et possède un sens profond de la justice.
+                   </p>
+                    <br>
+                    <p class="description"> <strong> Affinités et Pouvoirs :</strong> Azan est un combattant puissant avec une force physique remarquable. 
+                        Il adhère strictement à un code moral et combat avec une massue, représentant l'autorité et la force de la loi.
+                    </p>
+
+                </ul>
             </div>
         </div>
     </main>
 
-    <!-- Custom JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
 </body>
+
+<!-- Custom JavaScript -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+crossorigin="anonymous"></script>
 
 </html>
