--- a/templates/god_hands.html
+++ b/templates/god_hands.html
@@ -10,7 +10,7 @@
         }
 
         document.addEventListener("DOMContentLoaded", function() {
-            loadFile('head.html', 'head-content');
+            loadFile('head/head.html', 'head-content');
             loadFile('header.html', 'header-content');
         });
     </script>
@@ -38,7 +38,7 @@
                                         <span aria-hidden="true">&times;</span>                                        </button>
                                     </div>
                                     <div class="modal-body">
-                                        <img src="../img/GOD_HANDS/Troupe_Faucon.png"
+                                        <img src="../img/GOD_HANDS/GOD_HANDS.png"
                                         class="modal-image img-fluid">
                                     </div>
                                 </div>
