--- a/templates/troupe_faucon.html
+++ b/templates/troupe_faucon.html
@@ -10,7 +10,7 @@
         }
 
         document.addEventListener("DOMContentLoaded", function() {
-            loadFile('head.html', 'head-content');
+            loadFile('head/head.html', 'head-content');
             loadFile('header.html', 'header-content');
         });
     </script>
