--- a/style/map.css
+++ b/style/map.css
@@ -1,141 +1,141 @@
-
 :root {
-    --primary-color: #d7d7db;
-    --secondary-color: #ededf0;
-    --background-one: #232326;
-    --background-two: #2a2a2e;
-    --border: #38383d;
-    --link-glow: #ff4545;
-  
-  }
-    
-  @font-face {
-    font-family: 'desdemonaregular';
-    src: url('../fonts/desdemon_1-webfont.woff2') format('woff2'),
-      url('../fonts/desdemon_1-webfont.woff') format('woff'), url('../fonts/desdemon.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-  
-  }
+  --primary-color: #d7d7db;
+  --secondary-color: #ededf0;
+  --background-one: #232326;
+  --background-two: #2a2a2e;
+  --border: #38383d;
+  --link-glow: #ff4545;
+}
 
-  .navbar-custom {
-    background-color: rgb(35, 35, 38, .95);
-    backdrop-filter: blur(5px);
-    font-family: 'Montserrat', sans-serif;
-    text-align: center;
-    display: flex;
-  }
-  
-  .navbar-brand {
-    width: 50px;
-  }
-  
-  .navbar-custom .navbar-brand,
-  .navbar-custom .navbar-text {
-    color: var(--secondary-color);
-  }
-  
-  .navbar-custom .navbar-nav .nav-link {
-    color: var(--primary-color);
-  }
-  
-  .navbar-custom .nav-item.active .nav-link,
-  .navbar-custom .nav-item:hover .nav-link {
-    color: var(--link-glow);
-  }
-  
-  .custom-toggler.navbar-toggler {
-    border-color: rgb(255, 69, 69);
-  }
-  
-  /* map partie */
-  html-map {
-    font-size: 16px;
-    width: 90%;
-    margin: 0 auto;
-    scroll-behavior: smooth;
-  }
-  
-  #body-map {
-    background: url(../img/Fond_Guts_Griffith.png);
-    background-size: cover;
-    background-attachment: fixed;
-    overflow: hidden; /*pas scroll*/
-    margin: 30px 8px;
-    padding: 25px;
-    border-radius: 10px;
-    border-style: solid;
-    border-width: 1px;
-  }
-  
-  #main-map {
-    margin-top: 50px;
-    margin-bottom: 30px;
-    border-radius: 10px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: var(--border);
-    background: var(--background-one);
-    color: var(--secondary-color);
-  }
-  
-  #map {
-    /* a revoir */
-    margin-left: -280px; 
-    height: 78vh;
-    width: 198vh;
-  }  
-  
-  #map-container {
-    width: auto;
-    height: auto;
-    background-color: white;
-    border: 1px solid black;
-    overflow: hidden; /* Assurez-vous que l'image ne dépasse pas le conteneur */
-    margin: 0 auto; /* Centrer le conteneur */
+@font-face {
+  font-family: "desdemonaregular";
+  src: url("../fonts/desdemon_1-webfont.woff2") format("woff2"),
+    url("../fonts/desdemon_1-webfont.woff") format("woff"),
+    url("../fonts/desdemon.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.navbar-custom {
+  background-color: rgb(35, 35, 38, 0.95);
+  backdrop-filter: blur(5px);
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  display: flex;
+}
+
+.navbar-brand {
+  width: 50px;
+}
+
+.navbar-custom .navbar-brand,
+.navbar-custom .navbar-text {
+  color: var(--secondary-color);
+}
+
+.navbar-custom .navbar-nav .nav-link {
+  color: var(--primary-color);
+}
+
+.navbar-custom .nav-item.active .nav-link,
+.navbar-custom .nav-item:hover .nav-link {
+  color: var(--link-glow);
+}
+
+.custom-toggler.navbar-toggler {
+  border-color: rgb(255, 69, 69);
+}
+
+/* map partie */
+html-map {
+  font-size: 16px;
+  width: 90%;
+  margin: 0 auto;
+  scroll-behavior: smooth;
+}
+
+#body-map {
+  background: url(../img/Fond_Guts_Griffith.png);
+  background-size: cover;
+  background-attachment: fixed;
+  overflow: hidden; /*pas scroll*/
+  margin: 30px 8px;
+  padding: 25px;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 1px;
+}
+
+#main-map {
+  margin-top: 15px;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: var(--border);
+  background: var(--background-one);
+  color: var(--secondary-color);
+}
+
+#map-container {
+  position: relative;
+  width: 110%;
+  left: -50px;
+  height: 78vh;
+  overflow: hidden;
+}
+
+#map {
+  height: 100%;
+  width: 100%;
 }
 
 .popup-image {
-    width: auto;
-    height: auto;
-    display: block;
-    margin: 0 auto;
+  width: auto;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+.leaflet-popup-content img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
 
 .leaflet-popup-content-wrapper {
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 .leaflet-popup-close-button {
-    color: black;
+  color: black;
 }
-  h1 {
-    font-family: 'desdemonaregular', 'Righteous', cursive;
-    font-size: 3rem;
-    letter-spacing: max(1vw);
-    font-weight: bold;
-    color: var(--primary-color);
-    margin: 1;
-    text-align: center;
-    text-align-last: center;
+h1 {
+  font-family: "desdemonaregular", "Righteous", cursive;
+  font-size: 3rem;
+  letter-spacing: max(1vw);
+  font-weight: bold;
+  color: var(--primary-color);
+  margin: 1;
+  text-align: center;
+  text-align-last: center;
+}
+
+/* Responsiveness */
+@media (max-width: 600px) {
+  figcaption {
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: left;
+    justify-content: center;
   }
-   
-  /* Responsiveness */
-  @media (max-width: 600px) {
-    figcaption {
-      padding-left: 10px;
-      padding-right: 10px;
-      text-align: left;
-      justify-content: center;
-    }
+}
+
+@media (max-width: 768px) {
+  html {
+    width: 500px;
   }
-  
-  @media (max-width: 768px) {
-    html {
-      width: 500px;
-    }
-  }
-  
-  
+}
