--- a/style/style.css
+++ b/style/style.css
@@ -12,27 +12,33 @@ html {
   --background-two: #2a2a2e;
   --border: #38383d;
   --link-glow: #ff4545;
-
 }
-
 
 @font-face {
-  font-family: 'desdemonaregular';
-  src: url('../fonts/desdemon_1-webfont.woff2') format('woff2'),
-    url('../fonts/desdemon_1-webfont.woff') format('woff'), url('../fonts/desdemon.ttf') format('truetype');
+  font-family: "desdemonaregular";
+  src: url("../fonts/desdemon_1-webfont.woff2") format("woff2"),
+    url("../fonts/desdemon_1-webfont.woff") format("woff"),
+    url("../fonts/desdemon.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
-
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 .navbar-custom {
-  background-color: rgb(35, 35, 38, .95);
+  background-color: rgb(35, 35, 38, 0.95);
   backdrop-filter: blur(5px);
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-align: center;
   display: flex;
+  justify-content: center; /* Centrer les éléments horizontalement */
+  align-items: center; /* Centrer les éléments verticalement */
+}
+
+.navbar-nav {
+  display: flex;
+  justify-content: center; /* Centrer les éléments horizontalement */
+  align-items: center; /* Centrer les éléments verticalement */
 }
 
 .navbar-brand {
@@ -60,13 +66,13 @@ html {
 /* -------- Navigation Menu End -------- */
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: var(--secondary-color);
 }
 
 /* Titles and Subtitles */
 h1 {
-  font-family: 'desdemonaregular', 'Righteous', cursive;
+  font-family: "desdemonaregular", "Righteous", cursive;
   font-size: 3rem;
   letter-spacing: max(1vw);
   font-weight: bold;
@@ -78,13 +84,13 @@ h1 {
 
 h2 {
   font-size: 2em;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-align: left;
 }
 
 h3 {
   font-size: 1.5rem !important;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* Titles & Subtitles End */
@@ -186,7 +192,7 @@ hr {
   transition: 0.3s;
   border-style: solid;
   border-width: 1px;
-  border-color: var(--border)
+  border-color: var(--border);
 }
 
 #image3:hover {
@@ -197,7 +203,6 @@ hr {
   width: 400px;
   height: auto;
 }
-
 
 .modal-image2 {
   width: 600px;
@@ -212,8 +217,6 @@ hr {
 .modal-header {
   border-style: hidden;
 }
-
-
 
 /* Captioning */
 
@@ -296,8 +299,6 @@ p {
   text-indent: 25px;
 }
 
-
-
 .list {
   padding: 0;
   margin: 0;
@@ -305,8 +306,7 @@ p {
 }
 
 .symbol {
-  background: url('../img/Kentaro/Symbol.png') no-repeat left top;
-
+  background: url("../img/Kentaro/Symbol.png") no-repeat left top;
 }
 
 /*ul {
@@ -322,7 +322,6 @@ p {
   background-position: left center;
   background-size: 25px;
 }
-
 
 .mangatitle {
   font-size: 1.2rem;
