--- a/templates/header.html
+++ b/templates/header.html
@@ -1,35 +1,39 @@
-<nav style="display: flex; text-align: center;" class="navbar navbar-expand-lg navbar-custom fixed-top">
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="./troupe_faucon.html">Troupe du Faucon</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./epopee.html">Épopée</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./royauté.html">Royauté</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./papauté.html">Papauté</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./main_page.html">
-                    <img src="../img/Berserk_logo.png" alt="Berserk Logo" style="height: 35px; width: auto;">
-                </a>
-            </li>          
-            <li class="nav-item">
-                <a class="nav-link" href="./god_hands.html">GOD Hand</a>
-            </li>  
-            <li class="nav-item">
-                <a class="nav-link" href="./demons.html">Demons</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./map.html">MAP</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./Kentaro_Miura.html">Kentaro Miura</a>
-            </li>
-        </ul>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-custom fixed-top">
+  <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="./troupe_faucon.html">Troupe du Faucon</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./epopee.html">Épopée</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./royauté.html">Royauté</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./papauté.html">Papauté</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./main_page.html">
+          <img
+            src="../img/Berserk_logo.png"
+            alt="Berserk Logo"
+            style="height: 35px; width: auto"
+          />
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./god_hands.html">GOD Hand</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./demons.html">Demons</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./map.html">MAP</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./Kentaro_Miura.html">Kentaro Miura</a>
+      </li>
+    </ul>
+  </div>
 </nav>
