--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -1,44 +1,369 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
-
-<head>
+  <head>
     <script>
-        function loadFile(filename, elementId) {
-            fetch(filename)
-                .then(response => response.text())
-                .then(text => document.getElementById(elementId).innerHTML = text);
-        }
+      function loadFile(filename, elementId) {
+        fetch(filename)
+          .then((response) => response.text())
+          .then(
+            (text) => (document.getElementById(elementId).innerHTML = text)
+          );
+      }
 
-        document.addEventListener("DOMContentLoaded", function() {
-            loadFile('head/head.html', 'head-content');
-            loadFile('header.html', 'header-content');
-        });
+      document.addEventListener("DOMContentLoaded", function () {
+        loadFile("head/head.html", "head-content");
+        loadFile("header.html", "header-content");
+      });
     </script>
-</head>
+  </head>
 
-<body id="body">
+  <body id="body">
     <div id="head-content"></div>
     <header id="header-content"></header>
-    
+
     <main id="main">
-        <div class="container">
-            <div>
-                <h1 id="title">XXXXXXXXX</h1>
-                <p id="captioning"><em>The legendary manga artist who was an inspiration to many</em></p>
-            </div>
+      <div class="container">
+        <div>
+          <h1 id="title">Berserk</h1>
+          <p id="captioning"><em>Different Arc du manga</em></p>
+          <div>
+            <figure>
+              <img
+                id="proto"
+                src="../img/GOD_HANDS/GOD_HANDS.png"
+                class="center hover"
+                data-toggle="modal"
+                data-target="#berserker-img"
+              />
+              <!-- Modal -->
+              <div
+                class="modal fade"
+                id="berserker-img"
+                tabindex="-1"
+                role="dialog"
+                aria-labelledby="berserker-img"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button
+                        type="button"
+                        class="close"
+                        data-dismiss="modal"
+                        aria-label="Close"
+                      >
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <img
+                        src="../img/GOD_HANDS/GOD_HANDS.png"
+                        class="modal-image img-fluid"
+                      />
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Modal -->
+            </figure>
+          </div>
         </div>
+        <br />
+
+        <div id="manga-list">
+          <ul>
+            <!-- Void -->
+            <li class="mangatitle">
+              <h2 style="text-align: center">Arc de l’épéiste noir</h2>
+            </li>
+
+            <div>
+              <figure>
+                <img
+                  id="proto"
+                  src="../img/GOD_HANDS/Void.png"
+                  class="center hover"
+                  data-toggle="modal"
+                  data-target="#berserker-img"
+                />
+                <!-- Modal -->
+                <div
+                  class="modal fade"
+                  id="berserker-img"
+                  tabindex="-1"
+                  role="dialog"
+                  aria-labelledby="berserker-img"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button
+                          type="button"
+                          class="close"
+                          data-dismiss="modal"
+                          aria-label="Close"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <img
+                          src="../img/GOD_HANDS/Void.png"
+                          class="modal-image img-fluid"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Modal -->
+              </figure>
+            </div>
+
+            <p class="description">
+              Il représente la sagesse et l'ordre dans le chaos. Ses actions
+              semblent guidées par une compréhension profonde et terrifiante de
+              la causalité.
+            </p>
+
+            <br />
+
+            <!-- Femto (Griffith) -->
+            <li class="mangatitle">
+              <h2 style="text-align: center">Arc de l’âge d’or</h2>
+            </li>
+            <div>
+              <figure>
+                <img
+                  id="proto"
+                  src="../img/GOD_HANDS/Femto.png"
+                  class="center hover"
+                  data-toggle="modal"
+                  data-target="#berserker-img"
+                />
+                <!-- Modal -->
+                <div
+                  class="modal fade"
+                  id="berserker-img"
+                  tabindex="-1"
+                  role="dialog"
+                  aria-labelledby="berserker-img"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button
+                          type="button"
+                          class="close"
+                          data-dismiss="modal"
+                          aria-label="Close"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <img
+                          src="../img/GOD_HANDS/Femto.png"
+                          class="modal-image img-fluid"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Modal -->
+              </figure>
+            </div>
+
+            <p class="description">
+              Il représente la sagesse et l'ordre dans le chaos. Ses actions
+              semblent guidées par une compréhension profonde et terrifiante de
+              la causalité.
+            </p>
+            <br />
+
+            <!-- Slan  -->
+            <li class="mangatitle">
+              <h2 style="text-align: center">Arc de condamnation</h2>
+            </li>
+            <div>
+              <figure>
+                <img
+                  id="proto"
+                  src="../img/GOD_HANDS/Slan.png"
+                  class="center hover"
+                  data-toggle="modal"
+                  data-target="#berserker-img"
+                />
+                <!-- Modal -->
+                <div
+                  class="modal fade"
+                  id="berserker-img"
+                  tabindex="-1"
+                  role="dialog"
+                  aria-labelledby="berserker-img"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button
+                          type="button"
+                          class="close"
+                          data-dismiss="modal"
+                          aria-label="Close"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <img
+                          src="../img/GOD_HANDS/Slan.png"
+                          class="modal-image img-fluid"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Modal -->
+              </figure>
+            </div>
+
+            <p class="description">
+              Il représente la sagesse et l'ordre dans le chaos. Ses actions
+              semblent guidées par une compréhension profonde et terrifiante de
+              la causalité.
+            </p>
+            <br />
+
+            <!-- Ubik  -->
+            <li class="mangatitle">
+              <h2 style="text-align: center">Arc du Faucon Millenium</h2>
+            </li>
+            <div>
+              <figure>
+                <img
+                  id="proto"
+                  src="../img/GOD_HANDS/Ubik.png"
+                  class="center hover"
+                  data-toggle="modal"
+                  data-target="#berserker-img"
+                />
+                <!-- Modal -->
+                <div
+                  class="modal fade"
+                  id="berserker-img"
+                  tabindex="-1"
+                  role="dialog"
+                  aria-labelledby="berserker-img"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button
+                          type="button"
+                          class="close"
+                          data-dismiss="modal"
+                          aria-label="Close"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <img
+                          src="../img/GOD_HANDS/Ubik.png"
+                          class="modal-image img-fluid"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Modal -->
+              </figure>
+            </div>
+
+            <p class="description">
+              Il représente la sagesse et l'ordre dans le chaos. Ses actions
+              semblent guidées par une compréhension profonde et terrifiante de
+              la causalité.
+            </p>
+            <br />
+
+            <!-- Ubik  -->
+            <li class="mangatitle">
+              <h2 style="text-align: center">Fantasia Arc</h2>
+            </li>
+            <div>
+              <figure>
+                <img
+                  id="proto"
+                  src="../img/GOD_HANDS/Ubik.png"
+                  class="center hover"
+                  data-toggle="modal"
+                  data-target="#berserker-img"
+                />
+                <!-- Modal -->
+                <div
+                  class="modal fade"
+                  id="berserker-img"
+                  tabindex="-1"
+                  role="dialog"
+                  aria-labelledby="berserker-img"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button
+                          type="button"
+                          class="close"
+                          data-dismiss="modal"
+                          aria-label="Close"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <img
+                          src="../img/GOD_HANDS/Ubik.png"
+                          class="modal-image img-fluid"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Modal -->
+              </figure>
+            </div>
+
+            <p class="description">
+              Il représente la sagesse et l'ordre dans le chaos. Ses actions
+              semblent guidées par une compréhension profonde et terrifiante de
+              la causalité.
+            </p>
+            <br />
+          </ul>
+        </div>
+      </div>
     </main>
 
     <!-- Custom JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
