--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -11,7 +11,7 @@
       }
 
       document.addEventListener("DOMContentLoaded", function () {
-        loadFile("head/head.html", "head-content");
+        loadFile("head/head-main.html", "head-content");
         loadFile("header.html", "header-content");
       });
     </script>
@@ -30,7 +30,7 @@
             <figure>
               <img
                 id="proto"
-                src="../img/GOD_HANDS/GOD_HANDS.png"
+                src="../img/Main/Berserk.png"
                 class="center hover"
                 data-toggle="modal"
                 data-target="#berserker-img"
@@ -58,7 +58,7 @@
                     </div>
                     <div class="modal-body">
                       <img
-                        src="../img/GOD_HANDS/GOD_HANDS.png"
+                        src="../img/Main/Main.png"
                         class="modal-image img-fluid"
                       />
                     </div>
@@ -82,7 +82,7 @@
               <figure>
                 <img
                   id="proto"
-                  src="../img/GOD_HANDS/Void.png"
+                  src="../img/Main/Void.png"
                   class="center hover"
                   data-toggle="modal"
                   data-target="#berserker-img"
@@ -110,7 +110,7 @@
                       </div>
                       <div class="modal-body">
                         <img
-                          src="../img/GOD_HANDS/Void.png"
+                          src="../img/Main/Void.png"
                           class="modal-image img-fluid"
                         />
                       </div>
@@ -137,7 +137,7 @@
               <figure>
                 <img
                   id="proto"
-                  src="../img/GOD_HANDS/Femto.png"
+                  src="../img/Main/Femto.png"
                   class="center hover"
                   data-toggle="modal"
                   data-target="#berserker-img"
@@ -165,7 +165,7 @@
                       </div>
                       <div class="modal-body">
                         <img
-                          src="../img/GOD_HANDS/Femto.png"
+                          src="../img/Main/Femto.png"
                           class="modal-image img-fluid"
                         />
                       </div>
@@ -191,7 +191,7 @@
               <figure>
                 <img
                   id="proto"
-                  src="../img/GOD_HANDS/Slan.png"
+                  src="../img/Main/Slan.png"
                   class="center hover"
                   data-toggle="modal"
                   data-target="#berserker-img"
@@ -219,7 +219,7 @@
                       </div>
                       <div class="modal-body">
                         <img
-                          src="../img/GOD_HANDS/Slan.png"
+                          src="../img/Main/Slan.png"
                           class="modal-image img-fluid"
                         />
                       </div>
@@ -245,7 +245,7 @@
               <figure>
                 <img
                   id="proto"
-                  src="../img/GOD_HANDS/Ubik.png"
+                  src="../img/Main/Ubik.png"
                   class="center hover"
                   data-toggle="modal"
                   data-target="#berserker-img"
@@ -273,7 +273,7 @@
                       </div>
                       <div class="modal-body">
                         <img
-                          src="../img/GOD_HANDS/Ubik.png"
+                          src="../img/Main/Ubik.png"
                           class="modal-image img-fluid"
                         />
                       </div>
@@ -299,7 +299,7 @@
               <figure>
                 <img
                   id="proto"
-                  src="../img/GOD_HANDS/Ubik.png"
+                  src="../img/Main/Ubik.png"
                   class="center hover"
                   data-toggle="modal"
                   data-target="#berserker-img"
@@ -327,7 +327,7 @@
                       </div>
                       <div class="modal-body">
                         <img
-                          src="../img/GOD_HANDS/Ubik.png"
+                          src="../img/Main/Ubik.png"
                           class="modal-image img-fluid"
                         />
                       </div>
