--- a/templates/header.html
+++ b/templates/header.html
@@ -25,8 +25,35 @@
       <li class="nav-item">
         <a class="nav-link" href="./god_hands.html">GOD Hand</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./demons.html">Demons</a>
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          href="#"
+          id="demonsDropdown"
+          role="button"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          Demons
+        </a>
+        <div class="dropdown-menu" aria-labelledby="demonsDropdown">
+          <a class="dropdown-item" href="./Demons/epeiste.html"
+            >Arc de l’épéiste noir</a
+          >
+          <a class="dropdown-item" href="./Demons/Age_or.html"
+            >Arc de l’âge d’or</a
+          >
+          <a class="dropdown-item" href="./Demons/Condamnation.html"
+            >Arc de condamnation</a
+          >
+          <a class="dropdown-item" href="./Demons/Faucon.html"
+            >Arc du Faucon Millenium</a
+          >
+          <a class="dropdown-item" href="./Demons/Fantasia.html"
+            >Arc Fantasia</a
+          >
+        </div>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="./map.html">MAP</a>
