--- a/templates/Demons/Condamnation.html
+++ b/templates/Demons/Condamnation.html
@@ -26,13 +26,13 @@
     <main id="main">
       <div class="container">
         <div>
-          <h1 id="title">Arc de l’âge d’or</h1>
-          <p style="text-align: center">Tomes 3 à 14</p>
+          <h1 id="title">Arc de condamnation</h1>
+          <p style="text-align: center">Tomes 14 à 21</p>
           <div>
             <figure>
               <img
                 id="proto"
-                src="../img/Demons/Age_or/1.png"
+                src="../img/Demons/Condamnation/1.png"
                 class="center hover"
                 data-toggle="modal"
                 data-target="#berserker-img"
@@ -60,7 +60,7 @@
                     </div>
                     <div class="modal-body">
                       <img
-                        src="../img/Demons/Age_or/Demons.png"
+                        src="../img/Demons/Condamnation/Demons.png"
                         class="modal-image img-fluid"
                       />
                     </div>
@@ -84,7 +84,7 @@
               <figure>
                 <img
                   id="proto"
-                  src="../img/Demons/Age_or/Zodd.png"
+                  src="../img/Demons/Condamnation/Zodd.png"
                   class="center hover"
                   data-toggle="modal"
                   data-target="#berserker-img"
@@ -112,7 +112,7 @@
                       </div>
                       <div class="modal-body">
                         <img
-                          src="../img/Demons/Age_or/Zodd.png"
+                          src="../img/Demons/Condamnation/Zodd.png"
                           class="modal-image img-fluid"
                         />
                       </div>
