--- a/templates/header.html
+++ b/templates/header.html
@@ -1,66 +1,108 @@
-<nav class="navbar navbar-expand-lg navbar-custom fixed-top">
-  <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="./troupe_faucon.html">Troupe du Faucon</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./epopee.html">Épopée</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./royauté.html">Royauté</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./papauté.html">Papauté</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./main_page.html">
-          <img
-            src="../img/Berserk_logo.png"
-            alt="Berserk Logo"
-            style="height: 35px; width: auto"
-          />
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./god_hands.html">GOD Hand</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle"
-          href="#"
-          id="demonsDropdown"
-          role="button"
-          data-toggle="dropdown"
-          aria-haspopup="true"
-          aria-expanded="false"
-        >
-          Demons
-        </a>
-        <div class="dropdown-menu" aria-labelledby="demonsDropdown">
-          <a class="dropdown-item" href="./Demons/epeiste.html"
-            >Arc de l’épéiste noir</a
-          >
-          <a class="dropdown-item" href="./Demons/Age_or.html"
-            >Arc de l’âge d’or</a
-          >
-          <a class="dropdown-item" href="./Demons/Condamnation.html"
-            >Arc de condamnation</a
-          >
-          <a class="dropdown-item" href="./Demons/Faucon.html"
-            >Arc du Faucon Millenium</a
-          >
-          <a class="dropdown-item" href="./Demons/Fantasia.html"
-            >Arc Fantasia</a
-          >
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./map.html">MAP</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./Kentaro_Miura.html">Kentaro Miura</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Navigation Bar</title>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
+      <div
+        class="collapse navbar-collapse justify-content-center"
+        id="navbarNav"
+      >
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/templates/troupe_faucon.html"
+              >Troupe du Faucon</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/templates/epopee.html">Épopée</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/templates/royauté.html">Royauté</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/templates/papauté.html">Papauté</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/templates/main_page.html">
+              <img
+                src="/img/Berserk_logo.png"
+                alt="Berserk Logo"
+                style="height: 35px; width: auto"
+              />
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/templates/god_hands.html">GOD Hand</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="demonsDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Demons
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="demonsDropdown">
+              <li>
+                <a class="dropdown-item" href="/templates/Demons/epeiste.html"
+                  >Arc de l’épéiste noir</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" href="/templates/Demons/Age_or.html"
+                  >Arc de l’âge d’or</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="/templates/Demons/Condamnation.html"
+                  >Arc de condamnation</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" href="/templates/Demons/Faucon.html"
+                  >Arc du Faucon Millenium</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" href="/templates/Demons/Fantasia.html"
+                  >Arc Fantasia</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/templates/map.html">MAP</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/templates/Kentaro_Miura.html"
+              >Kentaro Miura</a
+            >
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </body>
+</html>
